# CIS365_CovidPrediction

./: .gitignore  README.md  covid_pred_controller.py  covid_pred_model.py  covid_pred_view.py  covid_prediction.ipynb  pyproject.toml  states.py  timeFrames.py  view.py
data/: Alabama.csv  Alaska.csv  Arizona.csv  Arkansas.csv  California.csv  Colorado.csv  Connecticut.csv  Delaware.csv  District of Columbia.csv  Florida.csv  Georgia.csv  Guam.csv  Hawaii.csv  Idaho.csv  Illinois.csv  Indiana.csv  Iowa.csv  Kansas.csv  Kentucky.csv  Louisiana.csv  Maine.csv  Maryland.csv  Massachusetts.csv  Michigan.csv  Minnesota.csv  Mississippi.csv  Missouri.csv  Montana.csv  Nebraska.csv  Nevada.csv  New Hampshire.csv  New Jersey.csv  New Mexico.csv  New York.csv  North Carolina.csv  North Dakota.csv  Northern Mariana Islands.csv  Ohio.csv  Oklahoma.csv  Oregon.csv  (+15 more)
predictions/: Alabama_cases.csv  Alabama_deaths.csv  Alaska_cases.csv  Alaska_deaths.csv  Arizona_cases.csv  Arizona_deaths.csv  Arkansas_cases.csv  Arkansas_deaths.csv  California_cases.csv  California_deaths.csv  Colorado_cases.csv  Colorado_deaths.csv  Connecticut_cases.csv  Connecticut_deaths.csv  Delaware_cases.csv  Delaware_deaths.csv  District of Columbia_cases.csv  District of Columbia_deaths.csv  Florida_cases.csv  Florida_deaths.csv  Georgia_cases.csv  Georgia_deaths.csv  Guam_cases.csv  Guam_deaths.csv  Hawaii_cases.csv  Hawaii_deaths.csv  Idaho_cases.csv  Idaho_deaths.csv  Illinois_cases.csv  Illinois_deaths.csv  Indiana_cases.csv  Indiana_deaths.csv  Iowa_cases.csv  Iowa_deaths.csv  Kansas_cases.csv  (+75 more)
